[project]
name = "infera"
version = "0.1.0"
description = "Autonomous research and decision intelligence platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "python-multipart",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
